@@ -1,4 +1,4 @@
-﻿zapret v.6
+﻿zapret v.7
 
 Для чего это надо
 -----------------
@@ -17,7 +17,8 @@
 Например, запрос вида "GET / HTTP/1.1\r\nHost: kinozal.tv......"
 мы посылаем 2 частями : сначала идет "GET ", затем "/ HTTP/1.1\r\nHost: kinozal.tv.....".
 Другие DPI спотыкаются, когда заголовок "Host:" пишется в другом регистре : например, "host:".
-Кое-где работает добавление дополнительного пробела после метода : "GET /" => "GET  /".
+Кое-где работает добавление дополнительного пробела после метода : "GET /" => "GET  /"
+или добавление точки в конце имени хоста : "Host: kinozal.tv."
 
 Как это реализовать на практике в системе linux
 -----------------------------------------------
@@ -95,10 +96,11 @@ nfqws
 
 Эта программа - модификатор пакетов и обработчик очереди NFQUEUE.
 Она берет следующие параметры :
+ --daemon		; демонизировать прогу
  --qnum=200		; номер очереди
  --wsize=4		; менять tcp window size на указанный размер
  --hostcase		; менять регистр заголовка "Host:"
- --daemon		; демонизировать прогу
+Параметры манипуляции могут сочетаться в любых комбинациях.
 
 tpws
 -----
@@ -106,11 +108,13 @@ tpws
 tpws - это transparent proxy.
  --bind-addr		; на каком адресе слушать. может быть ipv4 или ipv6 адрес. если не указано, то слушает на всех адресах ipv4 и ipv6
  --port=<port>		; на каком порту слушать
- --split-http-req=method|host	; способ разделения http запросов на сегменты : около метода (GET,POST) или около заголовка Host
- --hostcase             ; замена "Host:" => "host:"
- --methodspace		; добавить пробел после метода : "GET /" => "GET  /"
  --daemon               ; демонизировать прогу
  --user=<username>	; менять uid процесса
+ --split-http-req=method|host	; способ разделения http запросов на сегменты : около метода (GET,POST) или около заголовка Host
+ --hostcase             ; замена "Host:" => "host:"
+ --hostdot		; добавление точки после имени хоста : "Host: kinozal.tv."
+ --methodspace		; добавить пробел после метода : "GET /" => "GET  /"
+Параметры манипуляции могут сочетаться в любых комбинациях.
  
 Провайдеры
 ----------
