@@ -34,3 +34,7 @@ nfqws : ipv6 support in nfqws
 v6
 
 ipset : added "get_antizapret.sh"
+
+v7
+
+tpws : added ability to insert "." after Host: name
